Primera Estructura juego

--- a/index.html
+++ b/index.html
@@ -6,6 +6,29 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <header>
+        <h1>Quiz Game</h1>
+    </header>
+    <main>
+        <div class="classContainerMain">
+            <h4 class="classQuestionTitle">Hola</h4>
+            <div class="classContainerQuetion">
+                <img src="" alt="">
+                <button class="classBtnQuestion">A</button>
+                <P class="classTextQuestion" data-text-number="0">A</P>
+            </div>
+            <div class="classContainerQuetion">
+                <img src="" alt="">
+                <button class="classBtnQuestion">B</button>
+                <P class="classTextQuestion" data-text-number="1">B</P>
+            </div>
+            <div class="classContainerQuetion">
+                <img src="" alt="">
+                <button class="classBtnQuestion">C</button>
+                <P class="classTextQuestion" data-text-number="2">C</P>
+            </div>
+        </div>
+    </main>
+    <footer></footer>
 </body>
 </html>
