--- a/index.html
+++ b/index.html
@@ -16,17 +16,17 @@
             <h4 class="classQuestionTitle">Hola</h4>
             <div class="classContainerQuetion">
                 <img src="" alt="">
-                <button class="classBtnQuestion">A</button>
+                <button class="classBtnQuestion" data-text-number="0">A</button>
                 <P class="classTextQuestion" data-text-number="0">A</P>
             </div>
             <div class="classContainerQuetion">
                 <img src="" alt="">
-                <button class="classBtnQuestion">B</button>
+                <button class="classBtnQuestion" data-text-number="1">B</button>
                 <P class="classTextQuestion" data-text-number="1">B</P>
             </div>
             <div class="classContainerQuetion">
                 <img src="" alt="">
-                <button class="classBtnQuestion">C</button>
+                <button class="classBtnQuestion" data-text-number="2">C</button>
                 <P class="classTextQuestion" data-text-number="2">C</P>
             </div>
         </div>
