COlocando temporizador, falta ajustar que se reinicie bien

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/App.css">
-    
+    <link rel="stylesheet" href="css/temporizador.css">
     <title>Document</title>
 </head>
 <body>
@@ -29,6 +29,14 @@
                 <button class="classBtnQuestion" data-text-number="2">C</button>
                 <P class="classTextQuestion" data-text-number="2">C</P>
             </div>
+        </div>
+        <div class="classTemporizador">
+            <div class="wrapper">
+                <div class="pie spinner"></div>
+                <div class="pie filler"></div>
+                <div class="mask"></div>
+            </div>
+            <p id="timer">00:00</p>
         </div>
     </main>
     <footer></footer>
