--- a/index.html
+++ b/index.html
@@ -30,13 +30,15 @@
                 <P class="classTextQuestion" data-text-number="2">C</P>
             </div>
         </div>
-        <div class="classTemporizador">
-            <div class="wrapper">
-                <div class="pie spinner"></div>
-                <div class="pie filler"></div>
-                <div class="mask"></div>
+        <div id="idContainerTemporizador">
+            <div id="idTemproizador" class="classTemporizador">
+                <div id="idWrapper" class="wrapper">
+                    <div id="idSpinner" class="pie spinner"></div>
+                    <div id="idFiller" class="pie filler"></div>
+                    <div id="idMask" class="mask"></div>
+                </div>
+                <p id="timer">00:00</p>
             </div>
-            <p id="timer">00:00</p>
         </div>
     </main>
     <footer></footer>
