--- a/index.html
+++ b/index.html
@@ -30,15 +30,16 @@
                 <P class="classTextQuestion" data-text-number="2">C</P>
             </div>
         </div>
-        <div id="idContainerTemporizador">
-            <div id="idTemproizador" class="classTemporizador">
+        <div id="idContainerTemporizador" class="classTemporizadorPrincipal">
+            <div id="idTemproizador" class="">
                 <div id="idWrapper" class="wrapper">
                     <div id="idSpinner" class="pie spinner"></div>
                     <div id="idFiller" class="pie filler"></div>
                     <div id="idMask" class="mask"></div>
                 </div>
-                <p id="timer">00:00</p>
+                <p class="classPTemporizador" id="timer">00:00</p>
             </div>
+            <!--<object id="svgObjectIconTemporizador" class="classSvgIconReloj" data="assets/svg/Cronometro-21.svg" type="image/svg+xml" width="100%" height="100%"></object>-->
         </div>
     </main>
     <footer></footer>
